[tool.poetry]
name = "urlshortener"
version = "0.1.0"
description = ""
authors = ["lionex-ui <eugenemescaline@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
aiohttp = "^3.11.11"
setuptools = "^75.8.0"
pydantic-settings = "^2.7.1"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
